# pgp-again

./: .gitignore  .gitmodules  CMakeLists.txt  README  conanfile.txt  main.cpp  mainwindow.cpp  mainwindow.ui  pch.hpp  pgp-again.pro  res.qrc  tools.cpp  tools.h
src/: config.h  main.cpp  pch.h  pch.hpp  res.qrc  tools.h
src/core/: pgp-task.cpp  pgp-task.h
src/lang/: zh_CN.qm  zh_CN.ts
src/model/: key-info.h  keys-model.h
src/translations/: zh_CN.qm  zh_CN.ts
src/ui/: generate-key-pair-dialog.cpp  generate-key-pair-dialog.h  generate-key-pair-dialog.ui  key-import-dialog.cpp  key-import-dialog.h  key-import-dialog.ui  main-window.cpp  main-window.h  main-window.ui  mainwindow.h  mainwindow.ui  progress-dialog.cpp  progress-dialog.h  progress-dialog.ui
test/: CMakeLists.txt  makefile  test-aes.cpp  test-rsa.cpp  test.cpp
translations/: zh_CN.qm  zh_CN.ts
